resources/tests/invalid_syntax/fn_decl_arg_same.ct
//`Cannot have parameters of same name 'a'!
//1
fn hello(i64 a, i8 a)->i64;